fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ h1 {
 .click-here {
     text-decoration: underline;
     color: #1076f1;
-    margin: 0 5px;
 }
 
 #pin {
